Fix disabled URL edit dark mode

--- a/app/Resources/static/themes/material/css/dark_theme.scss
+++ b/app/Resources/static/themes/material/css/dark_theme.scss
@@ -131,6 +131,10 @@
     color: #abb2bf;
   }
 
+  input[type="url"]:not(.browser-default):disabled {
+    color: #9e9e9e;
+  }
+
   .input-field.nav-panel-add.disabled,
   .input-field.nav-panel-add.disabled input {
     background-color: transparent;
